--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 GEMINI_API_KEY=your-api-key
-GEMINI_MODEL_ID=gemini-2.5-pro
-MODEL_CYPHER_ID=gemini-2.5-flash-lite-preview-06-17
+GEMINI_MODEL_ID=your-gemini-model-id
+MODEL_CYPHER_ID=your-cypher-model-id
 MEMGRAPH_HOST=localhost
 MEMGRAPH_PORT=7687
