feat: Add tree-sitter-python grammar as a submodule

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,4 +10,6 @@ dependencies = [
     "pymgclient>=1.4.0",
     "python-dotenv>=1.1.0",
     "toml>=0.10.2",
+    "tree-sitter>=0.24.0",
+    "tree-sitter-python>=0.23.6",
 ]
