--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,5 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "toml>=0.10.2",
     "tree-sitter>=0.24.0",
-    "tree-sitter-python>=0.23.6",
+    "watchdog>=6.0.0",
 ]
