--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,19 @@ dependencies = [
     "tree-sitter>=0.24.0",
     "watchdog>=6.0.0",
 ]
+
+[tool.uv]
+dev-dependencies = [
+    "pytest>=8.4.1",
+    "pytest-asyncio>=1.0.0",
+]
+
+[project.optional-dependencies]
+# Tree-sitter language support (optional)
+treesitter-full = [
+    "tree-sitter-python>=0.23.6",
+    "tree-sitter-javascript>=0.23.1", 
+    "tree-sitter-typescript>=0.23.2",
+    "tree-sitter-rust>=0.24.0",
+    "tree-sitter-go>=0.23.4",
+]
