--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "tree-sitter-python>=0.23.6",
     "tree-sitter>=0.24.0",
     "watchdog>=6.0.0",
+    "tree-sitter-scala>=0.24.0",
+    "tree-sitter-java>=0.23.5",
 ]
 
 [tool.uv]
@@ -29,4 +31,6 @@ treesitter-full = [
     "tree-sitter-typescript>=0.23.2",
     "tree-sitter-rust>=0.24.0",
     "tree-sitter-go>=0.23.4",
+    "tree-sitter-scala>=0.24.0",
+    "tree-sitter-java>=0.23.5",
 ]
