feat: add local models - still not good results

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,19 @@
-GEMINI_API_KEY=your-api-key
-GEMINI_MODEL_ID=your-gemini-model-id
-MODEL_CYPHER_ID=your-cypher-model-id
+LLM_PROVIDER=gemini
+
+# Gemini settings (required if LLM_PROVIDER is "gemini")
+GEMINI_API_KEY=your-gemini-api-key
+GEMINI_MODEL_ID=gemini-2.5-pro-preview-06-05
+MODEL_CYPHER_ID=gemini-2.5-flash-lite-preview-06-17
+
+# Local model settings (required if LLM_PROVIDER is "local")
+# Example for Ollama:
+LOCAL_MODEL_ENDPOINT="http://localhost:11434/v1"
+LOCAL_ORCHESTRATOR_MODEL_ID="llama3"
+LOCAL_CYPHER_MODEL_ID="llama3"
+LOCAL_MODEL_API_KEY="ollama" # Ollama uses "ollama" as a placeholder
+
 MEMGRAPH_HOST=localhost
 MEMGRAPH_PORT=7687
-LAB_PORT=3000
 MEMGRAPH_HTTP_PORT=7444
+LAB_PORT=3000
+TARGET_REPO_PATH=.
