--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "tree-sitter-python>=0.23.6",
     "tree-sitter>=0.24.0",
     "watchdog>=6.0.0",
+    "typer[all]>=0.12.5",
+    "rich>=13.7.1",
 ]
 
 [tool.setuptools]
@@ -24,10 +26,9 @@ test = [
     "pytest-asyncio>=1.0.0",
 ]
 
-[project.optional-dependencies]
 treesitter-full = [
     "tree-sitter-python>=0.23.6",
-    "tree-sitter-javascript>=0.23.1", 
+    "tree-sitter-javascript>=0.23.1",
     "tree-sitter-typescript>=0.23.2",
     "tree-sitter-rust>=0.24.0",
     "tree-sitter-go>=0.23.4",
