feat: Add directory listing and multimodal support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "loguru>=0.7.3",
-    "pydantic-ai-slim[google,openai]>=0.2.18",
+    "pydantic-ai-slim[google,openai,vertexai]>=0.2.18",
     "pymgclient>=1.4.0",
     "python-dotenv>=1.1.0",
     "toml>=0.10.2",
