--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,3 +59,8 @@ warn_return_any = true
 warn_unused_configs = true
 ignore_missing_imports = true
 disallow_untyped_defs = true
+
+[dependency-groups]
+dev = [
+    "types-toml>=0.10.8.20240310",
+]
