--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ treesitter-full = [
     "tree-sitter-go>=0.23.4",
     "tree-sitter-scala>=0.24.0",
     "tree-sitter-java>=0.23.5",
+    "tree-sitter-cpp>=0.23.0",
 ]
 
 [tool.ruff]
