--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,9 @@
-LLM_PROVIDER=gemini
-
-# Gemini settings (required if LLM_PROVIDER is "gemini")
+# Gemini settings
 GEMINI_API_KEY=your-gemini-api-key
 GEMINI_MODEL_ID=gemini-2.5-pro-preview-06-05
 MODEL_CYPHER_ID=gemini-2.5-flash-lite-preview-06-17
 
-# Local model settings (required if LLM_PROVIDER is "local")
+# Local model settings
 # Example for Ollama:
 LOCAL_MODEL_ENDPOINT="http://localhost:11434/v1"
 LOCAL_ORCHESTRATOR_MODEL_ID="llama3"
