--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,13 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "toml>=0.10.2",
     "tree-sitter-python>=0.23.6",
-    "tree-sitter>=0.24.0",
+    "tree-sitter==0.25.0",
     "watchdog>=6.0.0",
     "typer>=0.12.5",
     "rich>=13.7.1",
     "prompt-toolkit>=3.0.0",
     "diff-match-patch>=20241021",
+    "click>=8.0.0",
 ]
 
 [tool.setuptools]
