--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "grammars/tree-sitter-php"]
 	path = grammars/tree-sitter-php
 	url = https://github.com/tree-sitter/tree-sitter-php
+[submodule "grammars/tree-sitter-lua"]
+	path = grammars/tree-sitter-lua
+	url = https://github.com/tree-sitter-grammars/tree-sitter-lua
